--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^19.2.0",
     "@ant-design/icons-angular": "^19.0.0",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@swimlane/ngx-datatable": "^21.1.0",
     "ag-grid-angular": "^33.3.0",
     "bootstrap": "^5.3.6",
     "ng-bootstrap": "^1.6.3",
